arreglat problema dels makefiles

--- a/MODEL_CALCULATIONS/makefile
+++ b/MODEL_CALCULATIONS/makefile
@@ -4,14 +4,29 @@
 
 
 SUBDIRS =  TEMPORAL_EVOLUTION_DETERMINISTIC  TEMPORAL_EVOLUTION_STOCHASTIC   
+BUILDIRS = $(SUBDIRS:%=build-%)
+CLEANDIRS = $(SUBDIRS:%=clean-%)
 
 
-.PHONY: subdirs $(SUBDIRS)
-     
+
+
+all: $(BUILDIRS)
+$(SUBDIRS): $(BUILDIRS)
+$(BUILDIRS):
+	$(MAKE) -C $(@:build-%=%)
+
+
 subdirs: $(SUBDIRS)
 
+clean: $(CLEANDIRS)
+$(CLEANDIRS):
+	$(MAKE) -C $(@:clean-%=%) clean
 
-$(SUBDIRS):
-	$(MAKE) -C $@
+
+
+.PHONY:  subdirs $(SUBDIRS)
+.PHONY:  subdirs $(BUILDDIRS)
+.PHONY:  subdirs $(CLEANDIRS)
+.PHONY:  all clean
 
 
