--- a/MODEL_CALCULATIONS/TEMPORAL_EVOLUTION_STOCHASTIC/makefile
+++ b/MODEL_CALCULATIONS/TEMPORAL_EVOLUTION_STOCHASTIC/makefile
@@ -19,7 +19,7 @@ EXTRA_LIBRARY_PATH+=-L${CPGPLOT}library/###########
 EXTRA_LIBRARY_PATH+=-L${CPGPLOT}library_basic_UTL/#
 EXTRA_LIBRARY_PATH+=-L${C_NR}######################
 EXTRA_LIBRARY_PATH+=-L${GSL_DA}####################
-EXTRA_LIBRARY_PATH+=-L${IO_DIR}
+EXTRA_LIBRARY_PATH+=-Wl,-rpath=${IO_DIR} -L${IO_DIR}
 EXTRA_LIBRARY_PATH+=-L${ERROR_DIR}
 # EXTRA_INCLUDE_PATH=-I/usr/local/pgplot############# See custumized ./bashrc file on ${HOME} directory.
 EXTRA_INCLUDE_PATH+=-I${INCLUDE_DIR}###############
@@ -79,7 +79,7 @@ EXE=${ODE_MODEL}
 ##############################################################################################################
 EXTERN=#Possibilities: void (to be locally executed) / -static (to be non-locally executed) #
 ######################################## Possibilities: GA (locally executed) / GA_EXTERN (non-locally executed)
-LDFLAGS+=-lm -lgsl -lgslcblas -lDa_GSL_UTL -lda_IO -lda_Error -lNumRec -lNRUTL -L${C_NR} -lda_cpgplot_XY_GRID_FILE -lda_cpgplot_BASIC ${EXTRA_LIBRARY_PATH}
+LDFLAGS+=-lm -lgsl -lgslcblas -lDa_GSL_UTL -lda_IO -lda_Error -lNumRec -lNRUTL  -L${C_NR} -lda_cpgplot_XY_GRID_FILE -lda_cpgplot_BASIC ${EXTRA_LIBRARY_PATH}
 CXXFLAGS+=${EXTRA_INCLUDE_PATH} -D${V} -D${CPG} -D${FILE}  -D${TYPE_NUMERICAL_INTEGRATION} -D${RANDOM_SEED}  -D${MODEL} -D${JACOBIAN} -D${NR} -D${STATIONARITY} -DHAVE_INLINE ${EXTERN} -g #-Wall -D${ERROR}
 ##############################################################################################################
 # either -g or some optimization opiton, for instance, -O3
